<resources>

    <string name="desc_main">当前坚持天数 %d</string>
    <string name="desc_target">目标坚持天数 %d</string>
    <string name="ok">+1</string>
    <string name="up">厉害！继续保持哟！</string>
    <string name="desc">今天我完成任务了吗？</string>
    <string name="bad">-1</string>
    <string name="zero_scores">已经坚持0天啦！</string>
    <string name="fine">目标完成！</string>
    <string name="fined">目标已经完成！</string>
    <string name="harry_up">小心，不要太放纵哟！</string>
    <string name="untitled">未标题</string>
    <string name="time">时间 %s</string>
    <string name="curr_value">剩余天数 %d</string>
    <string name="status_add">状态: +1</string>
    <string name="status_sub">状态: -1</string>
    <string name="status_zero">状态: 未改变</string>
    <string name="unknownError">未知错误</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_del_all">确定要清除所有记录？</string>
    <string name="dialog_blank">失败,有信息还未填写完毕</string>
    <string name="dialog_del">确定要删除此项？</string>
    <string name="dialog_ok">当然要</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="dialog_cancel">是我手滑了</string>
    <string name="canceled">已取消操作</string>
    <string name="loading">加载中...</string>
    <string name="card_desc">目标的描述</string>
    <string name="target_val">目标达到的天数</string>
    <string name="target">目标坚持的天数</string>
    <string name="title">目标名称</string>
    <string name="app_name">心流Flow</string>
    <string name="tip">已经到底了</string>
    <string name="bin_name">垃圾桶</string>
    <string name="options">今天心情怎么样？</string>
    <string name="tip1">暂无更多内容~</string>

    <string name="button_1">开心</string>
    <string name="button_2">愉悦</string>
    <string name="button_3">感动</string>
    <string name="button_4">兴奋</string>
    <string name="button_5">幸福</string>
    <string name="button_6">平静</string>
    <string name="button_7">充实</string>
    <string name="button_8">后悔</string>
    <string name="button_9">向往</string>
    <string name="button_10">惊讶</string>
    <string name="button_11">疲惫</string>
    <string name="button_12">伤心</string>
    <string name="button_13">委屈</string>
    <string name="button_14">愤怒</string>
    <string name="button_15">焦虑</string>

    <string name="menu_add">add</string>
    <string name="menu_my">个人主页</string>
    <string name="menu_bin">垃圾桶</string>
    <string name="menu_find">日记回看</string>
    <string name="menu_todolist">to do list</string>

    <string-array name="psycard">
        <item>蝴蝶效应
            亚马逊雨林一只蝴蝶翅膀偶尔振动
            也许两周后就会引起
            美国得克萨斯州的一场龙卷风</item>
        <item>鳄鱼法则
            假定一只鳄鱼
            咬住你的脚
            如果你用手去试图
            挣脱你的脚
            鳄鱼便会
            同时咬住你的脚与手
            你唯一的办法
            就是牺牲一只脚</item>>
        <item>鲇鱼效应
            鲶鱼在搅动小鱼
            生存环境的同时
            也激活了小鱼的求生能力</item>
        <item>羊群效应
            羊群是一种很散乱的组织
            平时在一起也是盲目地左冲右撞
            但一旦有一只头羊动起来
            其他的羊也会不假思索地一哄而上
        </item>
        <item>刺猬法则
            主要是指人际交往中的
            “心理距离效应”
        </item>
        <item>手表定律
            一个人有一只表时
            可以知道现在是几点钟
            而当他同时拥有两只时
            却无法确定
        </item>
        <item>二八定律
            在任何一组东西中
            最重要的只占20%
            其余80%尽管是多数
            却是次要的
        </item>
        <item>木桶理论
            组成木桶的木板长短不齐
            则木桶的盛水量
            取决于最短的那一块木板
        </item>
        <item>马太效应
            凡有的还要加给他
            叫他有余
            没有的
            连他所有的也要夺过来
        </item>
        <item>鸟笼逻辑
            人们绝大部分的时候
            是采取惯性思维
        </item>
        <item>破窗效应
            一个房子如果窗户破了
            没有人去修补
            隔不久其它的窗户
            也会莫名其妙的被人打破
        </item>
        <item>责任分散效应
            指发生在超过
            某一临界规模的人群中
            没有明确的责任分配的趋向
        </item>
        <item>帕金森定律
            在行政管理中
            行政机构会像金字塔一样不断增多
            行政人员会不断膨胀
            组织效率越来越低下
        </item>
        <item>晕轮效应
            在人际交往中
            人身上表现出的某一方面的特征
            掩盖了其他特征
            从而造成人际认知的障碍
        </item>
        <item>霍桑效应
            指那些意识到自己
            正在被别人观察的个人
            具有改变自己行为的倾向
        </item>
        <item>习得性无助
            指因为重复的失败或惩罚
            而造成的听任摆布的行为
            通过学习形成的一种
            对现实的无望和
            无可奈何的行为心理状态
        </item>
        <item>证人的记忆
            很多证人提供的证词
            都不太准确
            具有个人倾向性
            带着个人的观点和意识
        </item>
        <item>罗森塔尔效应
            在本质上人的情感和观念
            会不同程度地
            受到别人下意识的影响
        </item>
        <item>虚假同感偏差
            人们常常会高估或夸大自己的信念
            判断及行为的普遍性
            当遇到与此相冲突的信息时
            这种偏差使人坚持自己的社会知觉
        </item>
        <item>踢猫效应
            指对弱于自己或者
            等级低于自己的对象
            发泄不满情绪
            而产生的连锁反应
        </item>
        <item>安慰剂效应
            病人虽然获得无效的治疗
            但却“预料”或“相信”
            治疗有效
            而让病患症状得到舒缓的现象
        </item>
        <item>垃圾桶理论
            企业员工面对一项决策时
            会不断提出问题
            并给出相应的解决方案
            这些方案实际上都被扔进了垃圾筒
            只有极少数能够成为最终决策的组成部分
        </item>
        <item>最高气温效应
            人们普遍认为
            每天最热总是下午2时左右
            其实这时的太阳早已偏西
            不是供给最大热量的时候
            此时气温之所以最高
            不过是源于此前的热量积累
        </item>
        <item>墨菲定律
            如果有两种或以上选择
            其中一种将导致灾难
            则必定有人会作出这种选择
        </item>
        <item>巴达姆效应
            每个人都会很容易相信一个笼统的
            一般性的人格描述特别适合他
            即使这种描述十分空洞
            仍然认为反映了自己的人格面貌
            哪怕自己根本不是这种人
        </item>
        <item>延迟满足效应
            指为了长远的
            更大的利益
            而自愿延缓或者
            放弃目前的较小的满足
        </item>
        <item>阿伦森效应
            指人们最喜欢那些
            对自己的赞扬不断增加的人或物
            最不喜欢那些显得不断减少的人或物
        </item>
        <item>比马龙效应
            评价主体低估被评价者能力
            认定被评价者是不求上进的
            以致被评价者将这种观念内化
            促使被评价者表现不良行为
        </item>
        <item>波纹效应
            指在学习的集体中
            教师对有影响力的学生施加压力
            实行惩罚等损害人格的作法时
            会引起师生对立
            出现抗拒现象
        </item>
        <item>布里丹毛驴效应
            决策过程中
            犹豫不定迟疑不决的现象
        </item>
        <item>蘑菇效应
            指蘑菇长在阴暗的角落
            得不到阳光
            也没有肥料 自生自灭
            只有长到足够高的时候
            才会开始被人关注
            可此时它自己已经能够接受阳光了
        </item>
    </string-array>
    <string-array name="psymethod">
        <item>动手做好一件事，动手组装电脑，沉浸在一本好书，偶尔抬头发现天色已晚，时间飞逝幸福感油然而生。</item>
        <item>怀旧让人幸福，在日常生活中，经常翻看相册，和老同学聊聊美好的校园时光这些都是增加幸福、让感情保鲜的好办法。</item>
        <item>别担心，要开心，睡个好觉（可以尝试睡前喝热牛奶或者泡脚哦）</item>
        <item>睡前记录下今天发生的三件快乐事</item>
        <item>每周写下值得感恩的人还有和这些人有关的事情</item>
        <item>坚持设置定期目标（日，周，月，年）</item>
        <item>与爱的人交流，给父母打电话，和伴侣去约会，和朋友吃晚餐</item>
        <item>请你花一分钟的时间测一次自己脉搏跳动的次数，感受当下的这一分钟，感受你生命里独一无二的一分钟。</item>
        <item>正念冥想，接纳这些思考停留在脑海里，不任其孤立，使自身呼吸、身体、声音伴随反刍，自己拥有的和周遭一切的意识，伴随反刍。</item>
        <item>请你用一个舒适的姿势半躺在椅子上，深吸气，保持1秒钟，123，再呼气！深吸气，保持1秒钟，再呼出！同时想象不快，烦恼、压力都随着每一次的呼气将之慢慢呼出</item>
        <item>系统脱敏，通过肌肉放松达到心理和生理上的放松，对自己感到焦虑的事情进行等级评估并排列，最后进行场景模拟</item>
        <item>每周进行一次认知疗法，对错误的概念和认知进行纠正，采取多种技术，如辩论等方式，对之前不合理的信念进行纠正。</item>
        <item>每天都给自己一定的时间放空自己，不要寻找答案。</item>
        <item>每天选择一段时间对手机进行隔离。</item>
        <item>对死亡有一个认知，对自己进行一个死亡教育，体会生命价值终极的平和和清醒。</item>
        <item>选择一个特定时间，多发出声音与自己进行交谈，让积极的你说服消极的你吧。</item>
        <item>你可以写下2个自身的拖延经历，当时究竟发生了什么？是什么诱发了你的拖延？你的感受如何？最后结果又是什么？</item>
        <item>将每天必须做的事情列举出来，标记出每件事的重要性，从最重要的事情开始做，重点关注重要的事。</item>
        <item>你早晨六点钟起床，可以在做早餐等开水的这段空闲时间里，复习前一天学过的知识。</item>
        <item>利用一些表单，帮助自己记录拖延时的感受，内心想法及可替代的想法，可以帮助你发现可能存在的一些以偏概全，灾难化的非理性认知方式。</item>
        <item>冥想，听息法:两耳静听自己的呼吸声,排除杂念。数息法:默念呼吸次数,从一到十到百,实者数“呼”,虚者数“吸”。</item>
        <item>所谓“物以类聚，人以群分”，如果你想提高自控力，那就去和自控力强的人在一起。</item>
        <item>记录下自己在什么样的想法，情况出现时最容易让自己有冲动，或者是想些什么暗示最容易让你放弃冲动。</item>
        <item>增强我不要的力量：不随便发誓，坐下时不翘二郎腿，增强我想要的力量：每天都做一些事用来养成习惯</item>
        <item>每天做一件让自己快乐的事情</item>
        <item>学会赞美，尽可能鼓励别人。</item>
        <item>每天记录至少5件你做成功的事情。任何小事都可以。</item>
        <item>每天早上都对着镜子里的自己说：“你很棒，你一定行的！”</item>
        <item>尝试着多做一些扩展性姿势吧，比如昂首挺胸，阔步向前，都会慢慢的提升你的自信心哦。</item>
        <item>当各种不自信的心理想法作祟时，你要尝试着去这样想：这只是我的坏想法，我不要管它，我先尝试着做一点，一点点就好！如果真的做了，局面可能就会不一样了。</item>

    </string-array>
    <string-array name="psysupport">
        <item>哈佛大学实验室的马修·吉林斯沃斯和丹·吉伯特的一项研究表明，人们专注于一件任务的时候最开心，而不是闲散的时候。</item>
        <item>心理学家的研究表明，我们仅仅通过思考就可以情绪化。</item>
        <item>美国宾汉姆顿大学的心理学家雅各布·诺塔和梅雷迪恩·科尔斯发表在《认知疗法与研究》杂志上的最新研究更是证明了睡眠和幸福密不可分的关系。</item>
        <item>研究表明，这个方法不仅可以帮助我们提高日常幸福感，还可以一定程度地改善抑郁症状。</item>
        <item>心理学研究表明，那些锻炼感恩之情的人会体验到更多的愉悦、快乐、幸福和乐观。而且，88%的专业人士表示对他们的同事表达感谢会使他们感到更快乐。</item>
        <item>设置的目标应该是有挑战可参考心理学中的性的、具体的、可评估的、有价值驱动的、有内在动力的，并且是有步骤的。SMART原则由George在1981年提出。</item>
        <item>心理学研究表明，沟通会让我们大脑兴奋，社会关系对我们幸福感至关重要。拥有更好的社会关系对我们的生存至关重要。</item>
        <item>帕斯卡尔说过：“我们几乎完全不想当下，即使想到，也不过是为了借助现在的光明来照亮未来。当下从来都不是我们最终的目的。过去和现在是我们的手段，只有未来是我们的目的。</item>
        <item>研究者提出，有规律地进行冥想可使心理超越西方心理学所认为的局限，甚至影响在可测量的智力和认知操作上的增进。</item>
        <item>放松训练是以一定的暗示语集中注意，调节呼吸，使肌肉得到充分放松，从而调节中枢神经系统兴奋性的方法。他可以降低中枢神经系统的兴奋性，降低由情绪紧张而产生的过多能量消耗。</item>
        <item>一个人全身肌肉都放松的时候，他的心率、呼吸、血压等生理反应的指标，和焦虑时的生理指标刚好呈现完全相反的变化趋势。</item>
        <item>情绪ABC理论是由美国心理学家埃利斯创建的。在情绪ABC理论中，A表示诱发事件；B表示个体针对此诱发事件产生的一些信念，即对这件事的看法和解释；C表示个体产生的情绪和行为结果。</item>
        <item>研究表明焦虑来源于对某些问题答案的追逐。</item>
        <item>心理学家认为，一些内向、孤僻、相对缺乏自信的人对手机的依赖几乎成了一种病态，适当原理手机，多多现充可以暂时缓解手机带来的焦虑。</item>
        <item>Deadline是第一生产力”，人们总是在“Deadline（死线）”临近时，才能心无旁骛地、高效率地完成任务，这其实就是普通人面对“死亡焦虑”绝佳时刻，它带来的不单单是焦虑，还有活在当下的体验。</item>
        <item>认知取向的心理学派认为，人在焦虑时，应多发出声音和自己交谈。当你听到自己坚定且自信的声音时，你的内心会更加笃定，焦虑的程度会相对减轻。</item>
        <item>大脑具有可塑性，但是大脑中的“精神上的轨道”一旦建立，就变得难以消除。这称为“大脑可塑性悖论”。要改变拖延症，就必须增强你的意识察觉力，从惯性的“凹槽”中跳出来。</item>
        <item>1876年，意大利经济学家帕累托注意到英国人的财富和收益模式，提出了著名的二八法则。这不仅适用于经济学领域，它可以应用于我们生活的方方面面。</item>
        <item>琐碎时间全部加起来，约占据人生中的三分之一，当利用好琐碎时间后，有很多时间去做其他事情，便可有效地预防拖延。</item>
        <item>非理性的认知不但会直接导致人们的拖延，还会影响人们的情绪，使人们拖延着无法完成一件事情。</item>
        <item>冥想能从根本上该变大脑的结构，这便是神经可塑性的最佳应用实例。冥想一段时间之后，你的大脑就会变成调试良好的意志力机器。在你的前额皮质和影响自我意识的区域里，大脑灰质都会增多。</item>
        <item>在社会心理学中对应提到的是相似吸引效应，是人际吸引的一种情况，大致上是指由于觉得彼此相似，所以相互喜欢。</item>
        <item>人类拥有自我意识，当做一件事时，我们能意识到自己在做什么，也知道我们为什么要这样做，如果没有自我意识，自控系统将毫无用武之地。</item>
        <item>心理学研究发现：日常的这些训练可以增强人们日常生活中的自我意识，相应大脑区域里的灰质也会随之增多。</item>
        <item>美国心理学家协会调查发现，最有效地解压方法包括：锻炼或参加室外活动，阅读听音乐，按摩，外出散步，瑜伽等</item>
        <item>心理学家建议执行这个法则,并不以你对别人的爱为前提。这些行为的目的是加强目前的感觉——但有时也是为了唤醒一种感觉。</item>
        <item>通过这个方式，你可以不断的强化你所擅长的地方，也会发现很多事只要“硬着头皮”去做一次，就会发现它比想象的简单很多。</item>
        <item>鼓励对于人的作用是不言而喻的，无论这鼓励是来自自己还是他人，都能够使得受用者产生强大的自信心和行动力。心理学的“自我实现预言”恰好阐明了这一点。</item>
        <item>这个理论是由社会心理学家埃米·卡迪在《高能量姿势》中提出。我们的情绪很大程度上会受到激素的调节。睾丸素被称为力量型激素，可以让人们更加自信；皮质醇是压力激素，会导致我们更加自卑。</item>
        <item>自我实现的预言（提出者社会学家罗贝特·莫顿）当人们根据过往的经验提出了一个观点（他人或自己），你的行动就会想方设法地把这个观点演变为事实。</item>

    </string-array>
</resources>