<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diary.write.ButtonActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_8"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:text="@string/button_8" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_above="@id/button_8"
            android:layout_marginRight="36dp"
            android:layout_marginBottom="96dp"
            android:layout_toLeftOf="@id/button_8"
            android:text="@string/button_1" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_above="@id/button_8"
            android:layout_marginRight="-100dp"
            android:layout_marginBottom="97dp"
            android:layout_toLeftOf="@id/button_8"
            android:text="@string/button_2" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_above="@id/button_8"
            android:layout_marginRight="-239dp"
            android:layout_marginBottom="94dp"
            android:layout_toLeftOf="@id/button_8"
            android:text="@string/button_3" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_above="@id/button_8"
            android:layout_marginRight="36dp"
            android:layout_marginBottom="30dp"
            android:layout_toLeftOf="@id/button_8"
            android:text="@string/button_4" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_above="@id/button_8"
            android:layout_toLeftOf="@id/button_8"
            android:layout_marginRight="-102dp"
            android:layout_marginBottom="32dp"
            android:text="@string/button_5" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_above="@id/button_8"
            android:layout_marginRight="-239dp"
            android:layout_marginBottom="31dp"
            android:layout_toLeftOf="@id/button_8"
            android:text="@string/button_6" />

        <Button
            android:id="@+id/button_7"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_above="@id/button_8"
            android:layout_marginRight="38dp"
            android:layout_marginBottom="-40dp"
            android:layout_toLeftOf="@id/button_8"
            android:text="@string/button_7" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_above="@id/button_8"
            android:layout_marginLeft="38dp"
            android:layout_marginBottom="-40dp"
            android:layout_toRightOf="@id/button_8"
            android:text="@string/button_9" />

        <Button
            android:id="@+id/button_10"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_above="@id/button_8"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="-111dp"
            android:layout_toLeftOf="@id/button_8"
            android:text="@string/button_10" />

        <Button
            android:id="@+id/button_11"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_above="@id/button_8"
            android:layout_toLeftOf="@id/button_8"
            android:layout_marginTop="-39dp"
            android:layout_marginRight="-100dp"
            android:layout_marginBottom="-113dp"
            android:text="@string/button_11" />

        <Button
            android:id="@+id/button_12"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_above="@id/button_8"
            android:layout_marginRight="-237dp"
            android:layout_marginBottom="-111dp"
            android:layout_toLeftOf="@id/button_8"
            android:text="@string/button_12" />

        <Button
            android:id="@+id/button_13"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_above="@id/button_8"
            android:layout_marginRight="36dp"
            android:layout_marginBottom="-188dp"
            android:layout_toLeftOf="@id/button_8"
            android:text="@string/button_13" />

        <Button
            android:id="@+id/button_14"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_above="@id/button_1"
            android:layout_marginRight="-99dp"
            android:layout_marginBottom="-327dp"
            android:layout_toLeftOf="@id/button_8"
            android:text="@string/button_14" />

        <Button
            android:id="@+id/button_15"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_above="@id/button_8"
            android:layout_marginRight="-238dp"
            android:layout_marginBottom="-186dp"
            android:layout_toLeftOf="@id/button_8"
            android:text="@string/button_15" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:paddingBottom="60dp">

        <Button
            android:id="@+id/button_finish"
            android:layout_width="98dp"
            android:layout_height="38dp"
            android:layout_gravity="bottom"
            android:layout_marginEnd="60dp"
            android:background="#fff"
            android:text="我选好了"
            android:textColor="#AFAFAF"
            android:textSize="18dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>